--- a/helloworld.wicket/pom.xml
+++ b/helloworld.wicket/pom.xml
@@ -22,15 +22,29 @@
   </licenses>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <wicket.version>1.5.4</wicket.version>
     <jetty.version>7.5.0.v20110901</jetty.version>
     <scala.version>2.9.1</scala.version>
+    <gae.version>1.6.1</gae.version>
   </properties>
   <dependencies>
     <!--  WICKET DEPENDENCIES -->
     <dependency>
       <groupId>org.apache.wicket</groupId>
       <artifactId>wicket-core</artifactId>
+      <version>${wicket.version}</version>
+    </dependency>
+    <!-- OPTIONAL DEPENDENCY
+    <dependency>
+      <groupId>org.apache.wicket</groupId>
+      <artifactId>wicket-extensions</artifactId>
+      <version>${wicket.version}</version>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>org.wicketstuff</groupId>
+      <artifactId>wicketstuff-gae-initializer</artifactId>
       <version>${wicket.version}</version>
     </dependency>
 
@@ -72,6 +86,7 @@
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
+    <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <resources>
       <resource>
@@ -145,8 +160,7 @@
         <version>${jetty.version}</version>
         <configuration>
           <connectors>
-            <connector
-              implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
               <port>8080</port>
               <maxIdleTime>3600000</maxIdleTime>
             </connector>
@@ -167,6 +181,19 @@
         <configuration>
           <downloadSources>true</downloadSources>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>net.kindleit</groupId>
+        <artifactId>maven-gae-plugin</artifactId>
+        <version>0.9.2-SNAPSHOT</version>
+        <dependencies>
+          <dependency>
+            <groupId>net.kindleit</groupId>
+            <artifactId>gae-runtime</artifactId>
+            <version>${gae.version}</version>
+            <type>pom</type>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
