--- a/helloworld.wicket/pom.xml
+++ b/helloworld.wicket/pom.xml
@@ -86,7 +86,7 @@
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
-    <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
+    <!--outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory-->
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <resources>
       <resource>
@@ -182,7 +182,7 @@
           <downloadSources>true</downloadSources>
         </configuration>
       </plugin>
-      <plugin>
+      <!--plugin>
         <groupId>net.kindleit</groupId>
         <artifactId>maven-gae-plugin</artifactId>
         <version>0.9.2-SNAPSHOT</version>
@@ -194,7 +194,7 @@
             <type>pom</type>
           </dependency>
         </dependencies>
-      </plugin>
+      </plugin-->
     </plugins>
   </build>
 
