--- a/helloworld.wicket/.gitignore
+++ b/helloworld.wicket/.gitignore
@@ -8,3 +8,5 @@
 /src/main/webapp/WEB-INF/lib
 /src/main/webapp/WEB-INF/lib/*
 /src/main/webapp/WEB-INF/classes.timestamp
+/src/main/webapp/WEB-INF/classes
+/src/main/webapp/WEB-INF/classes/*
