ch.codecraft.helloworld.wicket-8 Migrate to Wicket 6.1

--- a/helloworld.wicket/.gitignore
+++ b/helloworld.wicket/.gitignore
@@ -5,6 +5,7 @@
 /.settings
 /.settings/*
 /.cache
+/helloworld.wicket.iml
 /src/main/webapp/WEB-INF/lib
 /src/main/webapp/WEB-INF/lib/*
 /src/main/webapp/WEB-INF/classes.timestamp
