--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ scala:
   - "2.10.0"
 jdk:
   - openjdk6
-script: "cd 'helloword.wicket' && sbt ++$TRAVIS_SCALA_VERSION package"
+script: sh -c 'cd helloword.wicket' && sbt ++$TRAVIS_SCALA_VERSION package
